2006-03-24  Dick Porter  <dick@ximian.com>
  
	* file-io.c (get_file_attributes): More stat macro breakage.
	Fixes bug 77759.

2006-03-22 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* icall.c: CodeBase returns '/' instead of '\\' on windows. Fixes
	bug #77877.

Wed Mar 15 16:31:38 CET 2006 Paolo Molaro <lupus@ximian.com>

	* icall.c, threads-types.h, threads.c: implemented finalizer for
	LocalDataStoreSlot.

2006-03-14  Zoltan Varga  <vargaz@gmail.com>

	* icall.c (ves_icall_System_Reflection_Assembly_GetTypes): Avoid
	overwriting entries in ModuleBuild->types, also clean up the code
	a little. Fixes #77774.

2006-03-09  Zoltan Varga  <vargaz@gmail.com>

	* icall.c (ves_icall_System_MonoMethodInfo_get_retval_marshal): New icall.

2006-03-09  Dick Porter  <dick@ximian.com>

	* file-io.c (get_file_attributes): Use S_ISLNK not "& S_IFLNK".
	Fixes bug 76966 again.

2006-03-07  Martin Baulig  <martin@ximian.com>

	* object.c
	(mono_field_get_value_object): Add support for MONO_TYPE_GENERICINST.

2006-03-07  Martin Baulig  <martin@ximian.com>

	* class.c
	(mono_class_get_full): Don't inflate TYPEDEF entries; fixes the
	regression introduced in r56970; see gtest-252.cs.

	* loader.c (mono_get_method_constrained): Correctly handle generic
	methods; see gtest-253.cs.

2006-03-04  Zoltan Varga  <vargaz@gmail.com>

	* icall.c (ves_icall_type_Equals): Handle NULLs. Fixes #77700.

2006-03-04  Martin Baulig  <martin@ximian.com>

	* icall.c (ves_icall_MonoGenericClass_GetParentType): Dynamically
	compute the parent type at runtime, just like we're already doing
	it for interfaces.

	* reflection.c
	(mono_reflection_bind_generic_parameters): Don't compute the
	parent type anymore.

	* class-internals.h (MonoDynamicGenericClass): Removed `parent'.

2006-03-04  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.h
	(mono_debugger_create_notification_function): Allocate memory at
	runtime and return a pointer to it.

2006-03-03  Dick Porter  <dick@ximian.com>
 
	* process.c